<resources>
    <string name="app_name">EventMaster</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="avatar">Avatar</string>
    <string name="textview">TextView</string>
    <string name="calendar">Calendar</string>
    <string name="_3_2025">3 марта, 2025</string>
    <string name="NameEvent">Название события</string>
    <string name="_14_00_15_10">с 14:00 до 15:10</string>
    <string name="EventInformation">описание события бла бла бла бла ля ля бла бла ля ля бла бла бла...</string>
    <string name="title_activity_sing_in">SingInActivity</string>
    <string name="title_activity_sign_in">signin\n</string>
</resources>