<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <!-- Large Title (Дата) -->
        <TextView
            android:id="@+id/TodayDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="24dp"
            android:text="@string/_3_2025"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Горизонтальный календарь -->
        <HorizontalScrollView
            android:id="@+id/Calendar"
            android:layout_width="380dp"
            android:layout_height="86dp"
            android:contentDescription="@string/calendar"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/calendarContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>

        <!-- Карточка события -->
        <LinearLayout
            android:id="@+id/EventCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Название и время -->
            <TextView
                android:id="@+id/EventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NameEvent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/EventTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_14_00_15_10"
                android:textSize="14sp" />

            <!-- Описание -->
            <TextView
                android:id="@+id/EventInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/EventInformation"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>